--- a/app/views/reports/new.erb
+++ b/app/views/reports/new.erb
@@ -1,31 +1,33 @@
-<h2>Make new Report:</>
+<h2>Make New Report:</>
 
 <form class="" action="/reports" method="post">
 
 <div>
 <label for="date">Date: </label>
-<input type="date" name="report[date]" value="">
+<input type="date" name="report[date]" value=""><br>
 </div>
 
 <div>
 <label for="user_id">User_id: </label>
-<input type="text" name="report[user_id]" value="">
+<input type="text" name="report[user_id]" value=""><br>
 </div>
 
 <div>
 <label for="subjects">Subjects: </label>
-<input type="text" name="report[subjects]" value="">
-</div>
-
-<div>
-<label for="comment">Comment: </label>
-<input type="text" name="report[comment]" value="">
+<input type="text" name="report[subjects]" value=""><br>
 </div>
 
 <div>
 <label for="due_date">Due_date: </label>
-<input type="date" name="report[due_date]" value="">
+<input type="date" name="report[due_date]" value=""><br>
 </div>
+
+
+<div>
+<label for="comment">Comment: </label>
+<textarea type="text" name="report[comment]" value=""></textarea><br>
+</div>
+
 
 
 
