--- a/app/views/reports/show.erb
+++ b/app/views/reports/show.erb
@@ -2,16 +2,16 @@
 
     <h3><%= @report.date %></h3>
 
-<ul class="list-group list-group-flush">
 
-<li class="list-group-item">Comments: <%= @report.comment %></li>
+
+<p>Comments: <%= @report.comment %></p>
   
  
-  <li class="list-group-item">Due_date: <%= @report.due_date %></li>
+  <p>Due_date: <%= @report.due_date %></p>
 
  
-  <li class="list-group-item">User_id: <%= @report.user_id %></li>
-  <li class="list-group-item">subjects: <%= @report.subjects %></li>
+  <p>User_id: <%= @report.user_id %></p>
+  <p>subjects: <%= @report.subjects %></p>
 
 
 </ul>
